Added option to list cars with a few details

--- a/view/head.html
+++ b/view/head.html
@@ -10,7 +10,7 @@
     <title>AMG</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="resources/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
