--- a/view/footer.html
+++ b/view/footer.html
@@ -1,6 +1,6 @@
 <!-- Site footer -->
 <footer class="footer">
-    <p>ETML 2019</p>
+    <p>&copy; Jonathan, Bruno, Nicolas et Léonard 2022</p>
 </footer>
 
 </div> <!-- /container -->
