--- a/view/header.html
+++ b/view/header.html
@@ -1,5 +1,5 @@
 <div class="container">
 
     <div class="masthead">
-        <h3 class="text-muted">CRM - Clients et factures</h3>
+        <h3 class="text-muted">Mercedes-AMG</h3>
         
